--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: Ajay-Meena-IITBombay/action-helloworld.git
+        uses: Ajay-Meena-IITBombay/action-helloworld@v1.1
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
